OpenHealth/force-app/main/default/force-app/main/default/objects/AppointmentNotes__c/AppointmentNotes__c.object-meta.xml
<CustomObject>
    <label>AppointmentNotes</label>
    <pluralLabel>AppointmentNotess</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>