OpenHealth/force-app/main/default/force-app/main/default/objects/AppointmentNotes__c/ClinicalNotes__c.field-meta.xml
<CustomField>
    <fullName>ClinicalNotes__c</fullName>
    <label>ClinicalNotes</label>
    <type>Text</type>
    <length>255</length>
</CustomField>