OpenHealth/force-app/main/default/force-app/main/default/objects/AppointmentNotes__c/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <type>Text</type>
    <length>255</length>
</CustomField>