OpenHealth/force-app/main/default/force-app/main/default/objects/AppointmentNotes__c/TreatmentPlan__c.field-meta.xml
<CustomField>
    <fullName>TreatmentPlan__c</fullName>
    <label></label>
    <type></type>
    <length>255</length>
</CustomField>